--- a/Html/Español html/Dashboard.css
+++ b/Html/Español html/Dashboard.css
@@ -61,7 +61,7 @@ body {
 }
 
 .login_logo img {
-    max-width: 150px;
+    max-width: 250px;
     height: auto; 
 }
 
@@ -196,7 +196,7 @@ tbody tr:hover {
     flex-grow: 1; 
     margin: 0; 
     height:100px;
-    width: 100%;
+    width: 1300px;
 }
 
 .Footer1 {
